动态修改大模型